--- a/RMDs/00_seminar_framework.html
+++ b/RMDs/00_seminar_framework.html
@@ -11,12 +11,11 @@
     <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
     <a href="00_seminar_framework.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[Framework]</a>
     <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Scenarios</a>
     <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
     <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
-    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Intro</a>
     <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; text-decoration: none;">Monte Carlo</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
 <h1>Seminar Framework</h1>
@@ -192,12 +191,32 @@
 </tr>
 <tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">05_monte_carlo_aggregation.html</code></td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Session 4-5 slides: Aggregation & Metrics</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Session 4: Why Simulation? The Case for Monte Carlo</td>
     <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
 </tr>
 <tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">06_aggregation_metrics.html</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Session 5: Aggregation Metrics & SQL Queries</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr>
     <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">schema/01_tax_lot_schema.sql</code></td>
     <td style="border: 1px solid #cbd5e1; padding: 12px;">DuckDB DDL for tax lot database</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">code/simulation_engine.py</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">GBM and survival sampling functions</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">code/run_simulation.py</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Main runner with DuckDB storage</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">code/ssa_life_tables.py</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">SSA actuarial mortality data</td>
     <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
 </tr>
 <tr>
