--- a/RMDs/01_opening_presentation.html
+++ b/RMDs/01_opening_presentation.html
@@ -11,10 +11,11 @@
     <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
     <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Framework</a>
     <a href="01_opening_presentation.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[1-Opening]</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">2-Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">3-Data Model</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">4-Stats</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; text-decoration: none;">5-Monte Carlo</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
 <h1>Session 1: The Tax Alpha Problem</h1>
@@ -119,6 +120,11 @@
     <td style="border: 1px solid #cbd5e1; padding: 12px;">Interactive exploration of results</td>
 </tr>
 </table>
+
+<div style="background-color: #eff6ff; border: 1px solid #60a5fa; border-radius: 8px; padding: 15px; margin: 20px 0;">
+<h3 style="color: #1d4ed8; margin-top: 5px;">Next: See the Problem in Action</h3>
+<p>Now let's look at concrete scenarios with real dollar amounts to understand how the RMD vs Step-Up tension plays out. <a href="01b_problem_scenarios.html" style="color: #1e40af; font-weight: bold;">Continue to Problem Scenarios</a></p>
+</div>
 
 </body>
 </html>
