--- a/RMDs/04_statistical_methods.html
+++ b/RMDs/04_statistical_methods.html
@@ -11,10 +11,11 @@
     <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
     <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Framework</a>
     <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">2-Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">3-Data Model</a>
-    <a href="04_statistical_methods.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[4-Stats]</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; text-decoration: none;">5-Monte Carlo</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
+    <a href="04_statistical_methods.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[Stats Methods]</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
 <h1>Session 3: Statistical Methods for Tax-Optimized Simulation</h1>
