chore(RMDs): commit all recent changes [2026-01-01 19:13]

--- a/RMDs/00_seminar_framework.html
+++ b/RMDs/00_seminar_framework.html
@@ -8,13 +8,15 @@
 <body>
 
 <nav style="background-color: #1e40af; padding: 12px 20px; margin: -8px -8px 20px -8px; border-radius: 0 0 8px 8px;">
-    <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
-    <a href="00_seminar_framework.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[Framework]</a>
-    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">RMD Seminar</a>
+    <a href="00_seminar_framework.html" style="color: #93c5fd; margin-right: 12px; text-decoration: none; font-weight: bold;">[Framework]</a>
+    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Opening</a>
+    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Scenarios</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Data Model</a>
+    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Intro</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Methods</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Monte Carlo</a>
     <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
@@ -220,11 +222,36 @@
     <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
 </tr>
 <tr>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebook/simulation_scaffold.ipynb</code></td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px;">Colab notebook for hands-on work</td>
-    <td style="border: 1px solid #cbd5e1; padding: 12px; color: #f59e0b;">Planned</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebooks/01_intro_monte_carlo.ipynb</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Notebook 1: Random numbers and pi estimation</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebooks/02_geometric_brownian_motion.ipynb</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Notebook 2: GBM for stock prices</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebooks/03_survival_analysis.ipynb</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Notebook 3: SSA life tables and mortality</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebooks/04_tax_strategies.ipynb</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Notebook 4: RMDs and strategy comparison</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px;">notebooks/05_full_monte_carlo.ipynb</code></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Notebook 5: Full simulation with DuckDB</td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; color: green;">Complete</td>
 </tr>
 </table>
+
+<div style="background-color: #eff6ff; border: 1px solid #60a5fa; border-radius: 8px; padding: 15px; margin: 20px 0;">
+<h3 style="color: #1d4ed8; margin-top: 5px;">Ready to Begin?</h3>
+<p>Start with the opening presentation to understand why this problem matters. <a href="01_opening_presentation.html" style="color: #1e40af; font-weight: bold;">Begin Session 1</a></p>
+</div>
 
 </body>
 </html>
