--- a/RMDs/03_data_model_presentation.html
+++ b/RMDs/03_data_model_presentation.html
@@ -8,13 +8,15 @@
 <body>
 
 <nav style="background-color: #1e40af; padding: 12px 20px; margin: -8px -8px 20px -8px; border-radius: 0 0 8px 8px;">
-    <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
-    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Framework</a>
-    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #93c5fd; margin-right: 15px; text-decoration: none; font-weight: bold;">[Data Model]</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">RMD Seminar</a>
+    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Framework</a>
+    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Opening</a>
+    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Scenarios</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #93c5fd; margin-right: 12px; text-decoration: none; font-weight: bold;">[Data Model]</a>
+    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Intro</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Methods</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Monte Carlo</a>
     <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
@@ -141,6 +143,11 @@
     <li><strong>Separate prices table</strong> - Good. Join when needed.</li>
     <li><strong>Computed at query time</strong> - Best for simulation. Price comes from the simulation path.</li>
 </ol>
+
+<div style="background-color: #eff6ff; border: 1px solid #60a5fa; border-radius: 8px; padding: 15px; margin: 20px 0;">
+<h3 style="color: #1d4ed8; margin-top: 5px;">Next: Why Averages Fail</h3>
+<p>Before we dive into the statistical methods, let's build intuition for why simple averages don't work for retirement planning. <a href="03b_stats_foundations.html" style="color: #1e40af; font-weight: bold;">Continue to Stats Foundations</a></p>
+</div>
 
 </body>
 </html>
