--- a/RMDs/05_monte_carlo_aggregation.html
+++ b/RMDs/05_monte_carlo_aggregation.html
@@ -8,15 +8,16 @@
 <body>
 
 <nav style="background-color: #1e40af; padding: 12px 20px; margin: -8px -8px 20px -8px; border-radius: 0 0 8px 8px;">
-    <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
-    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Framework</a>
-    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Scenarios</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
-    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Intro</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #93c5fd; text-decoration: none; font-weight: bold;">[Monte Carlo]</a>
+    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">RMD Seminar</a>
+    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Framework</a>
+    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Opening</a>
+    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Scenarios</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Data Model</a>
+    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Intro</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Methods</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #93c5fd; margin-right: 12px; text-decoration: none; font-weight: bold;">[Monte Carlo]</a>
+    <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
 </nav>
 
 <h1>Why Simulation? The Case for Monte Carlo</h1>
@@ -231,8 +232,8 @@ print(f"Actual pi: {np.pi:.4f}")
 </ul>
 
 <div style="background-color: #eff6ff; border: 1px solid #60a5fa; border-radius: 8px; padding: 15px; margin: 20px 0;">
-<h3 style="color: #1d4ed8; margin-top: 5px;">Next: Building the Engine</h3>
-<p>Now that you understand <em>why</em> we simulate, let's look at the actual code. See the <a href="code/simulation_engine.py" style="color: #1e40af; font-weight: bold;">simulation_engine.py</a> and <a href="code/run_simulation.py" style="color: #1e40af; font-weight: bold;">run_simulation.py</a> files in the code directory.</p>
+<h3 style="color: #1d4ed8; margin-top: 5px;">Next: Aggregation Metrics</h3>
+<p>Once we have 10,000 simulation results, how do we turn them into decisions? <a href="06_aggregation_metrics.html" style="color: #1e40af; font-weight: bold;">Continue to Aggregation Metrics</a></p>
 </div>
 
 </body>
