--- a/RMDs/06_aggregation_metrics.html
+++ b/RMDs/06_aggregation_metrics.html
@@ -8,13 +8,15 @@
 <body>
 
 <nav style="background-color: #1e40af; padding: 12px 20px; margin: -8px -8px 20px -8px; border-radius: 0 0 8px 8px;">
-    <span style="color: white; font-weight: bold; margin-right: 30px;">RMD Seminar</span>
-    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Framework</a>
-    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">1-Opening</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Data Model</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 15px; text-decoration: none;">Why Simulate</a>
+    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">RMD Seminar</a>
+    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Framework</a>
+    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Opening</a>
+    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Scenarios</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Glossary</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Data Model</a>
+    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Intro</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Methods</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Monte Carlo</a>
     <a href="06_aggregation_metrics.html" style="color: #93c5fd; text-decoration: none; font-weight: bold;">[Metrics]</a>
 </nav>
 
@@ -153,6 +155,21 @@ ORDER BY 1, 2;
 </pre>
 
 <p><strong>Key Insight:</strong> The step-up in basis benefit is larger for early deaths (less time for RMDs to erode the IRA). This is why hold-to-death often wins for shorter lifespans.</p>
+
+<hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
+
+<div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
+<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">Ready to Build</h2>
+<p>You now have all the conceptual foundations:</p>
+<ul>
+    <li>The problem domain (RMDs vs Step-Up)</li>
+    <li>The data model (tax lots, accounts, temporal data)</li>
+    <li>The statistical methods (GBM, survival analysis)</li>
+    <li>The simulation approach (Monte Carlo)</li>
+    <li>The aggregation metrics (expected value, VaR, win rate)</li>
+</ul>
+<p><strong>Next step:</strong> Open the <a href="notebooks/01_intro_monte_carlo.ipynb" style="color: #1e40af; font-weight: bold;">Jupyter notebooks</a> and start coding!</p>
+</div>
 
 </body>
 </html>
