--- a/RMDs/index.html
+++ b/RMDs/index.html
@@ -3,104 +3,130 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Wealth Management Data Seminar — Welcome</title>
+    <title>Wealth Management Data Seminar</title>
 </head>
 <body>
 
-<!-- Top navigation matches the other seminar pages (inline styles per style guide) -->
 <nav style="background-color: #1e40af; padding: 12px 20px; margin: -8px -8px 20px -8px; border-radius: 0 0 8px 8px;">
-    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">RMD Seminar</a>
-    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Framework</a>
-    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Opening</a>
-    <a href="01b_problem_scenarios.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Scenarios</a>
-    <a href="02_definitions_glossary.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Glossary</a>
-    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Data Model</a>
-    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Intro</a>
-    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Stats Methods</a>
-    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Monte Carlo</a>
-    <a href="06_aggregation_metrics.html" style="color: #dbeafe; text-decoration: none;">Metrics</a>
+    <a href="index.html" style="color: white; font-weight: bold; margin-right: 30px; text-decoration: none;">Home</a>
+    <a href="00_seminar_framework.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">Agenda</a>
+    <a href="01_opening_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">1. Problem</a>
+    <a href="03_data_model_presentation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">2. Data Model</a>
+    <a href="03b_stats_foundations.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">3. Why Simulate</a>
+    <a href="04_statistical_methods.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">4. Math</a>
+    <a href="05_monte_carlo_aggregation.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">5. Simulation</a>
+    <a href="06_aggregation_metrics.html" style="color: #dbeafe; margin-right: 12px; text-decoration: none;">6. Analysis</a>
+    <a href="02_definitions_glossary.html" style="color: #dbeafe; text-decoration: none;">Glossary</a>
 </nav>
 
-<h1>Welcome to the Wealth Management Data Seminar</h1>
-<p style="color: #64748b; font-style: italic;">This seminar uses a real wealth-management problem to learn data modeling, simulation, and decision science. Start here.</p>
+<h1>Wealth Management Data Seminar</h1>
+<p style="font-size: 18px; color: #475569;">A 1.5-day intensive for data science graduate students</p>
 
-<!-- A) Wealth Management as a Business -->
-<div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 20px 0;">
-    <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">A) Wealth Management as a Business</h2>
-    <p>Wealth management is a <strong style="color: #1e40af;">data-driven service business</strong>. Advisors translate client goals into <em>portfolio, tax, and cash-flow decisions</em> under constraints like risk tolerance, account types, and regulations. Every recommendation—asset allocation, rebalancing, withdrawals—relies on data feeds, a clear data model, and measurable outcomes.</p>
-    <ul>
-        <li><strong style="color: #1e40af;">Value chain:</strong> Intake (KYC) → Planning → Implementation → Monitoring → Reporting</li>
-        <li><strong style="color: #1e40af;">Data flows:</strong> Holdings/tax lots, market data, tax rules, life events</li>
-        <li><strong style="color: #1e40af;">Decisions:</strong> What to sell, when to realize gains, where to draw cash from, how to minimize taxes</li>
-    </ul>
-</div>
+<h2 style="color: #1e40af; margin-top: 30px;">What This Seminar Is About</h2>
 
-<!-- B) Retirement & Tax Efficiency -->
-<div style="background-color: #f8fafc; border: 1px solid #cbd5e1; border-radius: 8px; padding: 20px; margin: 20px 0;">
-    <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">B) Retirement and Tax Efficiency</h2>
-    <p>In retirement, <strong style="color: #1e40af;">tax efficiency compounds</strong>. The sequence of withdrawals across account types (Traditional IRA, Roth, taxable) determines lifetime taxes paid and the wealth passed to heirs. The right sequence can create <em>Tax Alpha</em>—excess value generated purely from tax-aware choices.</p>
-    <ul>
-        <li><strong style="color: #1e40af;">Key levers:</strong> account location, realization timing, loss harvesting, conversion windows</li>
-        <li><strong style="color: #1e40af;">Constraints:</strong> income brackets, IRMAA, capital-gain rates, estate rules</li>
-        <li><strong style="color: #1e40af;">Outcome:</strong> higher after-tax wealth for the client and heirs</li>
-    </ul>
-</div>
+<p>This seminar teaches you how to work with financial data by solving a real problem: figuring out when a retiree should take money out of their retirement accounts versus letting it grow.</p>
 
-<!-- C) RMDs in Context -->
-<div style="background-color: #fef3c7; border: 1px solid #f59e0b; border-radius: 8px; padding: 15px; margin: 20px 0;">
-    <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">C) RMDs and the Step-Up — Our Running Example</h2>
-    <p><strong>Required Minimum Distributions (RMDs)</strong> force withdrawals (taxed as income) from tax-deferred accounts starting in your early 70s. Meanwhile, <strong>Step-Up in Basis</strong> forgives unrealized gains at death for taxable accounts. These rules pull in opposite directions:</p>
-    <ul>
-        <li><strong style="color: #1e40af;">RMDs say:</strong> withdraw sooner and pay taxes now.</li>
-        <li><strong style="color: #1e40af;">Step-Up says:</strong> hold appreciated assets longer and potentially pay no capital gains.</li>
-    </ul>
-    <p>Which path builds more multi-generational wealth? That depends on <em>market returns</em> and <em>lifespan</em>—both uncertain. This seminar uses RMDs vs Step-Up as a concrete lens to learn the data, logic, and analytics of wealth management.</p>
-</div>
+<p>This is not a finance course. You will not become a financial advisor. Instead, you will learn:</p>
 
-<!-- D) From Concept to Analysis: Stats & Simulation -->
-<div style="background-color: #eff6ff; border: 1px solid #60a5fa; border-radius: 8px; padding: 15px; margin: 20px 0;">
-    <h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 10px;">D) From Concepts to Analysis</h2>
-    <p>We will model uncertain markets and lifespans, encode tax logic in a data model of <em>tax lots</em>, and run Monte Carlo simulations to compare strategies. Your goal is to identify when the optimal strategy flips—and why.</p>
-    <ul>
-        <li><strong style="color: #1e40af;">Data model:</strong> represent accounts, lots, basis, and cash flows</li>
-        <li><strong style="color: #1e40af;">Statistics:</strong> GBM for prices, survival distributions for mortality</li>
-        <li><strong style="color: #1e40af;">Simulation:</strong> 10<sup>4</sup>+ paths, aggregated to decision metrics</li>
-    </ul>
-</div>
-
-<!-- Contents list: links to all HTML files in this directory -->
-<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Presentations</h2>
-<ol>
-    <li><a href="00_seminar_framework.html" style="color: #1e40af;">Seminar Framework</a> - Schedule and materials overview</li>
-    <li><a href="01_opening_presentation.html" style="color: #1e40af;">The Tax Alpha Problem</a> - Why this matters</li>
-    <li><a href="01b_problem_scenarios.html" style="color: #1e40af;">Problem Scenarios</a> - Concrete examples</li>
-    <li><a href="02_definitions_glossary.html" style="color: #1e40af;">Definitions &amp; Glossary</a> - Key terminology</li>
-    <li><a href="03_data_model_presentation.html" style="color: #1e40af;">Data Model</a> - Tax lots and accounts</li>
-    <li><a href="03b_stats_foundations.html" style="color: #1e40af;">Why Averages Fail</a> - Building intuition</li>
-    <li><a href="04_statistical_methods.html" style="color: #1e40af;">Statistical Methods</a> - GBM and survival analysis</li>
-    <li><a href="05_monte_carlo_aggregation.html" style="color: #1e40af;">Monte Carlo Simulation</a> - Why we simulate</li>
-    <li><a href="06_aggregation_metrics.html" style="color: #1e40af;">Aggregation Metrics</a> - VaR, confidence intervals</li>
-</ol>
-
-<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Hands-On Notebooks</h2>
-<p>Progressive Jupyter notebooks that build the simulation step by step:</p>
-<ol>
-    <li><a href="notebooks/01_intro_monte_carlo.ipynb" style="color: #1e40af;">Intro to Monte Carlo</a> - Random numbers and pi estimation</li>
-    <li><a href="notebooks/02_geometric_brownian_motion.ipynb" style="color: #1e40af;">Geometric Brownian Motion</a> - Simulating stock prices</li>
-    <li><a href="notebooks/03_survival_analysis.ipynb" style="color: #1e40af;">Survival Analysis</a> - SSA life tables</li>
-    <li><a href="notebooks/04_tax_strategies.ipynb" style="color: #1e40af;">Tax Strategies</a> - RMDs and step-up in basis</li>
-    <li><a href="notebooks/05_full_monte_carlo.ipynb" style="color: #1e40af;">Full Monte Carlo</a> - Complete simulation with DuckDB</li>
-</ol>
-
-<h2 style="color: #1e40af; border-left: 4px solid #3b82f6; padding-left: 15px; margin-top: 30px;">Code &amp; Schema</h2>
 <ul>
-    <li><a href="code/" style="color: #1e40af;">code/</a> - Python modules (simulation_engine.py, tax_strategies.py, etc.)</li>
-    <li><a href="schema/" style="color: #1e40af;">schema/</a> - DuckDB DDL for tax lots and accounts</li>
+    <li><strong>How to model financial data</strong> in a database (tax lots, accounts, transactions)</li>
+    <li><strong>How to simulate uncertain futures</strong> using Monte Carlo methods</li>
+    <li><strong>How to turn simulation results into decisions</strong> using SQL aggregation</li>
 </ul>
 
-<!-- Footer with last-updated note -->
+<p>The wealth management problem is just the vehicle. The skills transfer to any domain where you need to model decisions under uncertainty.</p>
+
+<h2 style="color: #1e40af; margin-top: 30px;">The Problem We Will Solve</h2>
+
+<p>Meet Robert, age 65, who just retired with $1.5 million split between a Traditional IRA and a taxable brokerage account. The IRS has two rules that pull in opposite directions:</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+<tr style="background-color: #1e40af; color: white;">
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left; width: 50%;">Required Minimum Distributions (RMDs)</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left; width: 50%;">Step-Up in Basis</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; vertical-align: top;">
+        Starting at age 73, Robert must withdraw money from his IRA every year. Each withdrawal is taxed as ordinary income. The government wants its tax revenue before he dies.
+    </td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px; vertical-align: top;">
+        When Robert dies, his daughter inherits his brokerage account at its current value. All the gains he never paid taxes on? Forgiven. She can sell immediately and owe nothing.
+    </td>
+</tr>
+</table>
+
+<p><strong>The question:</strong> Should Robert take money out early and pay taxes now, or hold everything and let his daughter inherit tax-free?</p>
+
+<p>The answer depends on two things we cannot predict: how long Robert lives, and what the stock market does. If he dies at 70, holding wins. If he lives to 95, maybe not. We need to simulate thousands of possible futures to find out.</p>
+
+<h2 style="color: #1e40af; margin-top: 30px;">What You Will Build</h2>
+
+<p>Over 1.5 days, you will construct a simulation that:</p>
+
+<ol>
+    <li><strong>Generates 10,000 market scenarios</strong> using Geometric Brownian Motion</li>
+    <li><strong>Samples 10,000 possible lifespans</strong> from Social Security actuarial tables</li>
+    <li><strong>Applies tax rules</strong> to each scenario</li>
+    <li><strong>Stores results in DuckDB</strong> for analysis</li>
+    <li><strong>Finds the answer:</strong> When does Strategy A beat Strategy B?</li>
+</ol>
+
+<div style="background-color: #dbeafe; border: 1px solid #93c5fd; border-radius: 8px; padding: 20px; margin: 30px 0; text-align: center;">
+    <p style="font-size: 18px; margin: 0;"><a href="00_seminar_framework.html" style="color: #1e40af; font-weight: bold; text-decoration: none;">View the Agenda →</a></p>
+    <p style="color: #64748b; margin: 10px 0 0 0;">See the day-by-day schedule and session breakdown</p>
+</div>
+
+<h2 style="color: #1e40af; margin-top: 30px;">How to Use These Materials</h2>
+
+<p>Work through the sessions in order. Each one builds on the previous:</p>
+
+<table style="width: 100%; border-collapse: collapse; margin: 20px 0;">
+<tr style="background-color: #f1f5f9;">
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left; width: 25%;">Session</th>
+    <th style="border: 1px solid #cbd5e1; padding: 12px; text-align: left; width: 75%;">What You Learn</th>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="01_opening_presentation.html" style="color: #1e40af;">1. The Problem</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Why this matters, the two tax rules in conflict, concrete scenarios with dollar amounts</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="03_data_model_presentation.html" style="color: #1e40af;">2. Data Model</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">How to represent tax lots, accounts, and transactions in a database schema</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="03b_stats_foundations.html" style="color: #1e40af;">3. Why Simulate</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Why averages fail for retirement planning, the case for Monte Carlo</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="04_statistical_methods.html" style="color: #1e40af;">4. The Math</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Geometric Brownian Motion for markets, survival analysis for lifespans</td>
+</tr>
+<tr>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="05_monte_carlo_aggregation.html" style="color: #1e40af;">5. Simulation</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">Building the Monte Carlo engine, storing results in DuckDB</td>
+</tr>
+<tr style="background-color: #f8fafc;">
+    <td style="border: 1px solid #cbd5e1; padding: 12px;"><a href="06_aggregation_metrics.html" style="color: #1e40af;">6. Analysis</a></td>
+    <td style="border: 1px solid #cbd5e1; padding: 12px;">SQL queries to compute expected value, VaR, win rates, and decision boundaries</td>
+</tr>
+</table>
+
+<p>The <a href="02_definitions_glossary.html" style="color: #1e40af;">Glossary</a> is a reference. Use it when you encounter unfamiliar terms.</p>
+
+<h2 style="color: #1e40af; margin-top: 30px;">Hands-On Notebooks</h2>
+
+<p>Each session has a corresponding Jupyter notebook where you write code:</p>
+
+<ol>
+    <li><a href="notebooks/01_intro_monte_carlo.ipynb" style="color: #1e40af;">Intro to Monte Carlo</a> - Estimate pi by throwing darts</li>
+    <li><a href="notebooks/02_geometric_brownian_motion.ipynb" style="color: #1e40af;">Stock Price Simulation</a> - Generate random market paths</li>
+    <li><a href="notebooks/03_survival_analysis.ipynb" style="color: #1e40af;">Survival Analysis</a> - Sample lifespans from actuarial tables</li>
+    <li><a href="notebooks/04_tax_strategies.ipynb" style="color: #1e40af;">Tax Logic</a> - Implement RMD and step-up rules</li>
+    <li><a href="notebooks/05_full_monte_carlo.ipynb" style="color: #1e40af;">Full Simulation</a> - Put it all together with DuckDB</li>
+</ol>
+
 <hr style="border: 1px solid #cbd5e1; margin: 30px 0;">
-<p style="color: #64748b;">Last updated: 2026-01-02. Repository: gsaluncf/publicfiles → folder <code style="background-color: #e2e8f0; padding: 2px 4px; border-radius: 3px; font-family: 'Courier New', monospace;">w2026Seminar/RMDs</code></p>
+<p style="color: #64748b; font-size: 14px;">Last updated: 2026-01-02</p>
 
 </body>
 </html>
